- Receive_spell selects the function to call by the book (and not class).
- Nexus/Gravity breath teleports items away.
- Indestructible rings/Fireproof scrolls can stack.
[B] admin char caused 'write error'.
[H] 'p' key to scroll back when perusing a file.

22/06/2002 (Jir)
- spell interference is affected by corresponding skills.
- some parchments.
- auto-inscriber reimplemented.
[B] some spells are shown as 'unknown' even when castable
[B] Ghost powers were broken
[B] get_spell was messed due to sval/xtra1 hack :(

22/06/2002 (Yakina)
- updates needed for bcc.  Thanks Yakina for courtesy.



** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + interfere() should be affected by archery/wizardly skills?
  + no SKILL_BOOMERANG ?
  + SKILL_SWIM
  + Archery and Hunting should be separate skills?
    (Hunting books for non-archers are too strong)
  + spell_info should be redone
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)